# PyPathKit

./: .gitignore  README.md  pyproject.toml
pathkit/: __init__.py  file_reader.py
pathkit/base/: __init__.py  path.py  path_kit.py  pathkit.py  utils.py
pathkit/process/: __init__.py  annotation.py  reader.py  writer.py  xmldocument.py  xmlreader.py
pathkit/process/base/: abc.py
