[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pathkit"
version = "0.0.2"
description = "A lightweight path toolkit built on top of pathlib."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
authors = [
    { name = "wanghaonan-whn" }
]
keywords = ["path", "pathlib", "filesystem", "utility", "xml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: Other/Proprietary License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/wanghaonan-whn/PyPathKit"
Repository = "https://github.com/wanghaonan-whn/PyPathKit"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["pathkit", "pathkit.*"]

[tool.setuptools.package-data]
pathkit = ["py.typed"]
